--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "cd front-end && npm run build && cd .. && git add . && git commit -m \"deploy\" && vercel"
+    "build": "cd ../front-end && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
